<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|fill"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/displayEditText"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#3E681C"
        android:backgroundTint="#3E681C"
        android:clickable="false"
        android:contextClickable="false"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:gravity="center|start"
        android:importantForAutofill="no"
        android:inputType="none"
        android:padding="10dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textCursorDrawable="?attr/editTextBackground"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/displayTextView"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="#3E681C"
        android:backgroundTint="#3E681C"
        android:fontFamily="@font/press_start_2p"
        android:gravity="center_vertical|end"
        android:labelFor="@id/displayEditText"
        android:layerType="none"
        android:scrollHorizontally="true"
        android:singleLine="false"
        android:text="@string/reset_text"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clearButton"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textColor="#EE0347" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="#EE0347" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/powerButton"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/power" />

        <Button
            android:id="@+id/cosineButton"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cosine" />

        <Button
            android:id="@+id/sineButton"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/sine" />

        <Button
            android:id="@+id/tangentButton"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/tangent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sqrtButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/square_root" />

        <Button
            android:id="@+id/leftParentheseButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/left_parenthese" />

        <Button
            android:id="@+id/rightParentheseButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/right_parenthese" />

        <Button
            android:id="@+id/divButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/div_op" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eightButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/egiht" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/nine" />

        <Button
            android:id="@+id/mulButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/mul_op" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fourButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/four" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/five" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/six" />

        <Button
            android:id="@+id/subButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/sub_op" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/oneButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/one" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/two" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/three" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/add_op" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zeroButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/zero" />

        <Button
            android:id="@+id/dotButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/dot" />

        <Button
            android:id="@+id/answerButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/ans" />

        <Button
            android:id="@+id/equalityButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/equality" />
    </LinearLayout>

</LinearLayout>